# GrootPictionary

./: Cargo.toml  README.md  word_list.txt
src/: main.rs  notes.txt
