[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"]}
adw = { version = "0.6", package = "libadwaita", features = ["v1_2"]}
gdk4 = "0.8.1"
serde = { version = "1.0", features = ["derive"]}
async-channel = "2.3.1"
rand = "0.8.5"

